fixing alert page layout spacing

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -80,7 +80,7 @@ h3 {
 	position: absolute;
 	width: 267px;
 	height: 40px;
-	left: 215px;
+	left: 190px;
 	top: 121px;
 	background: #FFFEFF;
 	border: 1px solid #000000;
@@ -98,7 +98,7 @@ h3 {
 	position: absolute;
 	width: 157px;
 	height: 56px;
-	left: 500px;
+	left: 530px;
 	top: 121px;
 	font-family: Lato;
 	font-style: normal;
@@ -144,7 +144,7 @@ h3 {
 	position: absolute;
 	width: 430px;
 	height: 40px;
-	left: 260px;
+	left: 224px;
 	top: 199px;
 	background: #FFFEFF;
 	border: 1px solid #000000;
